fix: avoid selection gaps at line ends in code block

--- a/packages/core/src/theme/components/CodeBlock/index.scss
+++ b/packages/core/src/theme/components/CodeBlock/index.scss
@@ -50,17 +50,17 @@
     // #endregion text
 
     position: relative;
-    z-index: 1;
+    width: fit-content;
     margin: 0;
+    padding: 1rem 1.25rem;
     background: transparent;
+    z-index: 1;
   }
 
   & :where(code) {
     font-size: var(--rp-code-font-size);
     font-family: var(--rp-font-family-mono);
     display: inline-block;
-    padding: 1rem 0;
-    width: fit-content;
     min-width: 100%;
     line-height: 1.7;
   }
