--- a/packages/core/src/theme/styles/shiki.scss
+++ b/packages/core/src/theme/styles/shiki.scss
@@ -3,7 +3,6 @@
  * reference: https://github.com/shikijs/shiki/blob/main/docs/themes.md
  * -------------------------------------------------------------------------- */
 .shiki span.line {
-  padding: 0 1.25rem;
   display: inline-block;
 }
 
